--- a/first_project/src/Components/Expenses.css
+++ b/first_project/src/Components/Expenses.css
@@ -1,8 +1,13 @@
 .expenses {
     padding: 1rem;
-    background-color: rgba(130, 151, 76, 0.744);
+    background: #1e130c;
+        /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #9a8478, #1e130c);
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #9a8478, #1e130c);
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     margin: 2rem auto;
-    width: 95%;
+    width: 65%;
     border-radius: 12px;
     box-shadow: 0 1px 8px rgba(0,0,0,0.25);
 }
